# capital-flow-predictor

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_STATUS.md  README.md  docker-compose.yml  iren_gex_matrix.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  spy_gex_walkforward.json  turbo.json
apps/api/: Dockerfile  pyproject.toml
apps/api/src/cfp_api/: STAGE_DRIFT.md  __init__.py  auth.py  db.py  discord_background.py  discord_scoring.py  finviz.py  flow_background.py  logging_setup.py  main.py  metrics.py  migrations.py  news_aggregator.py  ratelimit.py  schemas.py  settings.py  stage_data.py  stage_logic.py  stage_sp500_static.py  stage_universes.py  talon_scanner.py  talon_store.py  talon_top_plays.py  talon_uw_client.py  talon_v2_block.py  talon_v2_catalysts.py  talon_v2_chart.py  talon_v2_context.py  talon_v2_float.py  talon_v2_fundamentals.py  talon_v2_macro.py  talon_v2_news.py  talon_v2_patterns.py  talon_v2_scanner.py  talon_v2_squeeze.py  talon_v2_store.py  talon_v2_swing.py  talon_v2_top_plays.py  talon_v2_whale.py
apps/api/tests/: test_auth.py  test_comparison.py  test_health.py  test_metrics.py  test_ratelimit.py  test_routes.py  test_screener_forward_call.py  test_stage_historical.py  test_stage_logic.py  test_talon_v2_swing.py
apps/athena/: README.md  pyproject.toml
apps/athena/launchd/: com.bellwether.athena-loop.plist
apps/athena/src/athena/: __init__.py  cli.py  config.py  orchestrator.py  watchlist.yaml
apps/athena/tests/: test_endpoints_indicators.py  test_gatekeeper.py  test_gex.py  test_regime.py
apps/brain/: pyproject.toml
apps/brain/launchd/: com.bellwether.brain-sweep.plist  sweep.sh
apps/brain/src/brain/: __init__.py  cli.py  config.py  dedupe.py  extract.py  fetch.py  frontmatter.py  index.py  pipeline.py  search_feeds.py  seed.py  sources.py  sources.yaml  vault.py
apps/brain/tests/: test_dedupe.py  test_frontmatter.py  test_index.py  test_pipeline.py
apps/brain/vault/equities/: earnings-per-share-eps-what-it-means-and-how-to-calculate-it--c0d5b108.md  fundamental-analysis-principles-types-and-how-to-use-it--ffaaf51f.md  market-capitalization-what-it-means-for-investors--916bb213.md  price-to-earnings-p-e-ratio-definition-formula-and-examples--010fba93.md  short-selling-your-step-by-step-guide-for-shorting-stocks--82b8a452.md  what-is-short-interest-and-why-does-it-matter-to-traders--972e8d6f.md
apps/brain/vault/greeks-mechanics/: call-option-what-it-is-how-to-use-it-and-examples--550ce0f8.md  how-implied-volatility-iv-works-with-options-and-examples--46ea207c.md  in-the-money-definition-call-put-options-and-example--1e790e39.md  open-interest-definition-how-it-works-and-example--5850040b.md  options-expiration-dates-key-insights-for-successful-trading--262b84a9.md  out-of-the-money-option-basics-and-examples--cfc9816b.md  put-option-what-it-is-how-it-works-and-how-to-trade--451ddd22.md  theta-what-it-means-in-options-trading-with-examples--80437ef7.md  understanding-option-strike-prices-definition-function-and-impact--bb19d62b.md  understanding-rho-definition-uses-and-calculations-for-options--87d753d6.md  understanding-the-cboe-volatility-index-vix-in-investing--0960af90.md  understanding-vega-in-options-definition-basics-and-examples--cd6369fa.md  vanna-charm-why-markets-drift-without-news--40ebe3cd.md  what-is-delta-in-derivatives-trading-and-how-does-it-work--6091a998.md  what-is-gamma-in-investing-and-how-is-it-used--7effbaba.md
apps/brain/vault/index-options/: s-p-500-index-options-cboe--91b1e678.md  s-p-500-index-options-product-specifications-cboe--9dba78d1.md  xsp-mini-spx-index-options-cboe--26be3f9a.md
apps/brain/vault/market-structure/: the-implied-order-book--52d8a92e.md
apps/brain/vault/my-findings/: campaign-report-2026-07-09--918086c2.md  campaign-report-2026-07-09--e11e4d71.md  campaign-swing-system-cohort-backtest-verdict--55e5284b.md  campaign-system-skylit-universe-x-uw-20-day-accumulation-plan--6215f314.md  dark-pool-print-research-report--a3b44860.md  dark-pool-research-module-isolated-reversible--ada2a0e7.md  doctrine-corrections-2026-07-11-king-vol-not-direction-campaign-beta-realized-no--29dae03a.md  dp-study-raw--006662ac.md  execution-policy-draft-pre-agentic-1000-account-basis--a9595740.md  forecast-ensemble-phase-1-report-2026-07-11--4e16c439.md  forecast-ensemble-study-design-pre-registered--eb206ac1.md  foundational-gex-vex-findings-0dte-spy-qqq-spxw--490878b4.md  gex-vex-knowledge-base-doctrine-empirics--23735194.md  gex-vex-structure-research-77-study-program-report--9ba98bf3.md  gexester-vexster-phase-1-findings-2026-04-30--f6f18a07.md  live-code-recommendations-require-explicit-user-approval--be18abf9.md  live-observation-logging-forward-validation-instrumentation-only--ef5e1d10.md  overnight-exit-entry-study-2026-07-10-07-11--28b8edb4.md  phase-0-endpoint-history-inventory-2026-07-11--5bd3a0c8.md  policy-simulation-report-ranked-by-out-of-sample-survival-not-return--63d0f9aa.md  research-journal--f4db7f98.md  research-ledger-newest-first--117f31de.md  research-runner-safe-by-design-autonomous-study-engine--d07f64b0.md  research-runner-summary-report--87aad3a0.md  skylit-academy-course-reference--ce913021.md  synthesis-command-center-bellwether-collective-brain-ledger--b785ec75.md  trading-doctrine-v2-evidence-backed-spine-bellwether-athena--3d7d59e4.md  uw-deep-raw--b27ece95.md  uw-deep2-raw--d4b462d7.md  uw-deep3-raw--a5206534.md  uw-real-pricing-research-consolidated-15-study-report--42832584.md  uw-research-module-isolated-reversible--329c35b8.md  vix-intraday-research-report--2badbcd2.md  (+1 more)
apps/discord_listener/: Dockerfile  README.md  pyproject.toml  railway.toml
apps/jobs/: pyproject.toml
apps/jobs/src/cfp_jobs/: __init__.py  (+39 more)
apps/jobs/tests/: test_agents_runner.py  test_eval_agents.py  test_fundamentals.py  test_holdings.py  test_macro.py  test_migrate.py  test_prices.py  test_score_gex_plans.py  test_skylit_login.py  test_train_guard.py  test_watchlist.py
apps/uw_socket/: Dockerfile  README.md  pyproject.toml  railway.toml
(+8472 files in other folders)
