[project]
name = "capital-flow-predictor"
version = "0.1.0"
description = "Capital Flow Predictor — sector rotation prediction with causal interpretability"
requires-python = ">=3.11,<3.13"

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/jobs",
    "packages/shared",
    "packages/features",
    "packages/models",
    "packages/agents",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI requires Query/Depends/Path/Body/Header/Form/File/Cookie as call
# expressions in argument defaults — the framework reads them at signature
# introspection time to wire up validation. Whitelist them so B008 stops
# flagging idiomatic route handlers.
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Query",
]

[tool.ruff.lint.per-file-ignores]
# Persona class attributes (cot_steps, etc.) are intentional class-level data
# overridden by subclasses, not mistakenly-shared mutable defaults. Annotating
# each with ClassVar across 13 files is more noise than signal.
"packages/agents/src/cfp_agents/personas/*.py" = ["RUF012"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = [".venv", "node_modules", "build", "dist"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
