[project]
name = "cfp-api"
version = "0.1.0"
description = "Capital Flow Predictor inference API"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "greenlet>=3.0",
    "httpx>=0.27",
    # Workspace deps so the API can run agent ensembles synchronously on demand.
    # Pulls LangGraph + openai/anthropic + xgboost (~300MB to image size).
    "cfp-jobs",
]

[tool.uv.sources]
cfp-jobs = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cfp_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
