[project]
name = "athena"
version = "0.1.0"
description = "Athena — signal generator: deterministic features + LLM thesis + risk gate + journal"
requires-python = ">=3.11,<3.13"
dependencies = [
    "brain",
    "httpx>=0.27",
    "pydantic>=2.6",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
athena = "athena.cli:app"

[tool.uv.sources]
brain = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
