[project]
name = "cfp-uw-socket"
version = "0.1.0"
description = "Long-running WebSocket subscriber for Unusual Whales real-time channels (flow_alerts, option_trades, gex, market_tide, trading_halts). Writes events into Postgres for the /flow tape and /explosive Board."
requires-python = ">=3.11,<3.13"
dependencies = [
    "websockets>=13.0",
    "asyncpg>=0.30",
    "httpx>=0.27",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cfp_uw_socket"]
